--- a/css/main.css
+++ b/css/main.css
@@ -105,16 +105,17 @@ a {
   background-color: #565c5c; }
 
 .formTitle {
-  margin-left: 40%;
+  margin-left: 25%;
   margin-top: 10%; }
 
 .formstyle {
+  display: grid;
   background-color: transparent;
+  width: 50%;
   padding: 30px;
   color: #fff;
   font-size: 30px;
-  justify-content: space-around;
-  margin-left: 40%; }
+  margin-left: 25%; }
 
 .youtube-player {
   position: relative;
