--- a/scss/mantenimiento.scss
+++ b/scss/mantenimiento.scss
@@ -130,17 +130,22 @@ a {
 }
 
 .formTitle {
-  margin-left: 40%;
+  margin-left: 25%;
   margin-top: 10%;
 }
 
 .formstyle {
+  display: grid;
   background-color: transparent;
+  width:50%;
   padding: 30px;
   color: #fff;
   font-size: 30px;
-  justify-content: space-around;
-  margin-left: 40%;
+  margin-left: 25%;
+  
+
+
+
 }
 
 .youtube-player {
