--- a/scss/_fuentes.scss
+++ b/scss/_fuentes.scss
@@ -1,1 +1,2 @@
+@import url(https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300&display=swap);
 $mainFont: "Yanone Kaffeesatz", sans-serif;
