--- a/scss/alumnos.css
+++ b/scss/alumnos.css
@@ -21,6 +21,7 @@ text-align:center;
 width:100%;
 height:50px;
 padding-top:30px;
+font-family: 'Fauna One', serif;
 }
 #mainform{
 width:960px;
@@ -49,6 +50,7 @@ font-family: 'Fauna One', serif;
 font-Weight:bold;
 font-size:18px;
 color:white;
+cursor: pointer;
 }
 #clear{clear:both;
 }
@@ -58,3 +60,23 @@ float:right;
 width:30%;
 margin-top:30px;
 }
+.buttons-style{
+    margin-top: 20px;
+    background-color:forestgreen;
+    border:1px solid white;
+    font-family: 'Fauna One', serif;
+    font-Weight:bold;
+    font-size:18px;
+    color:white;
+    cursor: pointer;
+    }
+
+    table, th, td {
+        margin-top: 20px;
+        border: 1px solid forestgreen;
+        font-family: 'Fauna One', serif;
+      }
+      thead{
+ 
+        font-family: 'Fauna One', serif;
+      }
